fix[BS-81]: fixed the visibility of the star on mobile phones.

--- a/brave-snouts-frontend/src/app/features/auction-feature/item/item-details/item-details.component.scss
+++ b/brave-snouts-frontend/src/app/features/auction-feature/item/item-details/item-details.component.scss
@@ -28,8 +28,8 @@
 
 .best-bid-icon {
     position: absolute;
-    right: 0px;
-    top: -22px;
+    right: 3px;
+    top: -15px;
     font-size: 2.5rem;
     color: #f9d935;
 }
